Allow editing #DISPLAYBPM traits in the editor.
Look in Edit Song Info to find it.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -534,6 +534,7 @@ x2.5=2.5x
 8=8
 8th=8th
 9=9
+Actual=Actual
 Add=Additive
 All Music=All Music
 AllDifficulties=All Difficulties
@@ -706,6 +707,7 @@ Song BGAnimation=Song BGAnimation
 Song Bitmap=Song Bitmap
 Song Movie=Song Movie
 Space=Space
+Specified=Specified
 Split=Split
 Standard=Standard
 Start=Start
@@ -822,6 +824,7 @@ Delete=Delete
 Delete beat and shift up=Delete beat and shift up
 Description=Description
 Difficulty=Difficulty
+Display BPM=Display BPM
 DisplayAspectRatio=Aspect Ratio
 DisplayColorDepth=Display Color
 DisplayResolution=Display Resolution
@@ -901,9 +904,11 @@ Low Meter=Low Meter
 Advanced Options=Advanced Options
 Main title=Main title
 Main title transliteration=Main title transliteration
+Max BPM=Max Specified BPM
 MaxTextureResolution=Texture Resolution
 MenuTimer=Menu Timer
 Meter=Meter
+Min BPM=Min Specified BPM
 Mines=Mines
 MoveRandomToEnd=Random At&nbsp;End
 More Options=More Options
@@ -1223,6 +1228,8 @@ Enter a new main title transliteration.=Enter a new main title transliteration.
 Enter a new main title.=Enter a new main title.
 Enter a new sub title transliteration.=Enter a new sub title transliteration.
 Enter a new sub title.=Enter a new sub title.
+Enter a new min BPM.=Enter the minimum displayed BPM.
+Enter a new max BPM.=Enter the maximum displayed BPM.
 More than %d notes per measure is not allowed.  This change has been reverted.=More than %d notes per measure is not allowed.  This change has been reverted.
 No backgrounds available=No backgrounds available
 EditHelpText=Up/Down:\n     change beat\nLeft/Right:\n     change snap\nNumber keys:\n     add/remove\n     tap note\nCreate hold note:\n     Hold a number\n     while moving\n     Up or Down\nCreate roll note:\n      Hold Shift,\n      then create a\n      hold note.\nSpace bar:\n     Set area\n     marker\nEnter:\n     Area Menu\nEscape:\n     Main Menu\nF1:\n     Show help\n
