[sm130score] Adjust language for the scoring.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -478,6 +478,9 @@ Edit Course=Edit Course contents.
 Shuffle=Shuffle the songs around.
 #
 GamePrefDefaultFail=Immediate fail causes a player to die when their life bar reaches 0. ImmediateContinue allows you to continue playing afterwards.
+#
+UserPrefSpecialScoringMode=Select the scoring mode to be used when not in a course.
+
 [OptionNames]
 0=0
 0.25x=0.25x
@@ -1049,6 +1052,8 @@ Edit Course=Edit Course
 Shuffle=Shuffle
 #
 GamePrefDefaultFail=Default Fail Type
+#
+UserPrefSpecialScoringMode=Scoring Mode
 [PaneDisplay]
 Steps=Steps
 Holds=Holds
