[sm130futures] Allow editing more Song Info in menus.
In this case, Beat 0 Offset, Music Sample Start,
and Music Sample Length can be edited via Edit Song Info.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -790,6 +790,7 @@ Background=Background
 BarDrain=Bar Drain
 BatLives=Bat Lives
 Base Difficulty=Base Difficulty
+Beat 0 Offset=Beat 0 Offset
 Bookkeeping=Bookkeeping
 Calibrate Machine Sync=Calibrate Audio Sync
 CPUSkill=CPU Skill
@@ -942,6 +943,8 @@ Predicted Meter=Predicted Meter
 Preferences=Preferences
 PreloadSounds=Preload Sounds
 Premium=Premium
+Preview Length=Preview Length
+Preview Start=Preview Start
 Export Packages=Export Packages
 Profile=Profile
 Profiles=Profiles
@@ -1230,11 +1233,14 @@ Enter a new credit.=Enter a new credit.
 Enter a new description.=Enter a new description.
 Enter a new chart style.=Enter a new chart style (e.g. "Pad", "Keyboard").
 Enter the author who made this step pattern.=Enter the author who made this step pattern.
+Enter the offset for the song.=Enter the beat 0 offset for the song.
 Enter a new last beat hint.=Enter a new last beat hint.
 Enter a new main title transliteration.=Enter a new main title transliteration.
 Enter a new main title.=Enter a new main title.
 Enter a new sub title transliteration.=Enter a new sub title transliteration.
 Enter a new sub title.=Enter a new sub title.
+Enter a new preview start.=Enter when the music sample starts.
+Enter a new preview length.=Enter how long the music sample lasts.
 Enter a new min BPM.=Enter the minimum displayed BPM.
 Enter a new max BPM.=Enter the maximum displayed BPM.
 More than %d notes per measure is not allowed.  This change has been reverted.=More than %d notes per measure is not allowed.  This change has been reverted.
