Make this use ScreenTextEntry.
The rest will be fixed once I find out why I'm having compilation issues.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1232,6 +1232,7 @@ Enter a new genre.=Enter a new genre.
 Enter a new credit.=Enter a new credit.
 Enter a new description.=Enter a new description.
 Enter a new chart style.=Enter a new chart style (e.g. "Pad", "Keyboard").
+Enter a new meter.=Enter the difficulty rating for this chart.
 Enter the author who made this step pattern.=Enter the author who made this step pattern.
 Enter the offset for the song.=Enter the beat 0 offset for the song.
 Enter a new last beat hint.=Enter a new last beat hint.
