[splittiming] Prepare right side of editor.
Now, what key on the keyboard can be used for switching...

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1276,6 +1276,9 @@ Mines=Mines
 Rolls=Rolls
 Lifts=Lifts
 Fakes=Fakes
+Timing Mode=Timing Mode
+Step Timing=Step Timing
+Song Timing=Song Timing
 Beat 0 offset=Beat 0 offset
 Preview Start=Preview Start
 Preview Length=Preview Length
