[splittiming] Add the [T]iming Switch.
One or two more things to do before running this...

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1956,6 +1956,7 @@ Cycle between tap notes=Cycle between tap notes
 Lay mine=Lay mine
 Lay lift=Lay lift
 Add to/remove from right half=Add to/remove from right half
+Switch Timing=Switch Timing
 Switch player (Routine only)=Switch player (Routine only)
 
 [Grade]
