[splittiming] BG stuff in Song Timing only.
Alright...let's see how badly I broke this.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1947,7 +1947,7 @@ Decrease/increase music offset=Decrease/increase music offset
 Decrease/increase sample music start=Decrease/increase sample music start
 Decrease/increase sample music length=Decrease/increase sample music length
 Play sample music=Play sample music
-Add/Edit Background Change=Add/Edit Background Change
+Add/Edit Background Change=Add/Edit Background Change (Song Timing Only)
 Insert beat and shift down=Insert beat and shift down
 Shift BPM changes and stops down one beat=Shift BPM changes and stops down one beat
 Delete beat and shift up=Delete beat and shift up
