--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1257,6 +1257,7 @@ This change creates more than %d notes in a measure.=This change creates more th
 This change creates notes past the end of the music and is not allowed.=This change creates notes past the end of the music and is not allowed.
 This will destroy all unsaved changes.=This will destroy all unsaved changes.
 Undo=Undo
+You must be in Step Timing Mode to edit the notes.=You must be in Step Timing Mode to edit the notes.
 
 Current beat=Current beat
 Current second=Current second
