Bring in language update from [splittiming].

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -983,8 +983,8 @@ Set modifiers=Set modifiers
 Set Mods=Set Mods
 Set selection start=Set selection start
 Set selection end=Set selection end
-Shift pauses and BPM changes down=Shift pauses and BPM changes down
-Shift pauses and BPM changes up=Shift pauses and BPM changes up
+Shift all timing changes down=Shift all timing changes down
+Shift all timing changes up=Shift all timing changes up
 ShowBanners=Show Banners
 ShowBeginnerHelper=Beginner Helper
 ShowCaution=Caution
