[splittiming] No BG Changes in Step Timing.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1258,6 +1258,7 @@ This change creates notes past the end of the music and is not allowed.=This cha
 This will destroy all unsaved changes.=This will destroy all unsaved changes.
 Undo=Undo
 You must be in Step Timing Mode to edit the notes.=You must be in Step Timing Mode to edit the notes.
+You must be in Song Timing Mode to edit BG Changes.=You must be in Song Timing Mode to edit BG Changes.
 
 Current beat=Current beat
 Current second=Current second
