[splittiming] More SST protection.
Also added InvalidSound for emphasis.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1259,6 +1259,9 @@ This will destroy all unsaved changes.=This will destroy all unsaved changes.
 Undo=Undo
 You must be in Step Timing Mode to edit the notes.=You must be in Step Timing Mode to edit the notes.
 You must be in Song Timing Mode to edit BG Changes.=You must be in Song Timing Mode to edit BG Changes.
+You must be in Step Timing Mode to record steps.=You must be in Step Timing Mode to record steps.
+You must be in Step Timing Mode to insert beats and shift down.=You must be in Step Timing Mode to insert beats and shift down.
+You must be in Step Timing Mode to delete beats and shift up.=You must be in Step Timing Mode to delete beats and shift up.
 
 Current beat=Current beat
 Current second=Current second
