[splittiming] add some missing strings to en.ini

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -854,6 +854,7 @@ Edit label=Edit label
 Edit warp=Edit warp
 Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
+Erase step timing=Erase step timing
 Effect=Effect
 EnableAttackSounds=Attack Sounds
 EnableMineHitSound=Mine Sounds
@@ -1226,6 +1227,7 @@ Enter a new Tickcount value.=Enter a new Tickcount value.
 Enter a new Combo value.=Enter a new Combo value.
 Enter a new Label value.=Enter a name for this section of the chart.
 Enter a new Warp value.=Enter the beat you will warp to when you reach this point.
+Are you sure you want to erase this chart's timing data?=Are you sure you want to erase this chart's timing data?
 Enter a new artist transliteration.=Enter a new artist transliteration.
 Enter a new artist.=Enter a new artist.
 Enter a new genre.=Enter a new genre.
