[splittiming] ScreenEdit + Speeds
Now let's try to implement the darn things.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -852,6 +852,8 @@ Edit tickcount=Edit tickcount
 Edit combo=Edit combo
 Edit label=Edit label
 Edit warp=Edit warp
+Edit speed (percent)=Edit speed (percent)
+Edit speed (wait)=Edit speed (wait in beats)
 Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
 Erase step timing=Erase step timing
@@ -1227,6 +1229,8 @@ Enter a new Tickcount value.=Enter a new Tickcount value.
 Enter a new Combo value.=Enter a new Combo value.
 Enter a new Label value.=Enter a name for this section of the chart.
 Enter a new Warp value.=Enter the beat you will warp to when you reach this point.
+Enter a new Speed percent value.=Enter the ratio for speed scrolling. 1 is the default.
+Enter a new Speed wait value.=Enter how long in beats it takes to change. 0 is instant.
 Are you sure you want to erase this chart's timing data?=Are you sure you want to erase this chart's timing data?
 Enter a new artist transliteration.=Enter a new artist transliteration.
 Enter a new artist.=Enter a new artist.
