[splittiming] SpeedSegments run on Seconds now.
ScreenEdit's code probably needs to be redone.
At least, someone find a way to remove "Beats"
or "Seconds" from the text entry area.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -558,6 +558,7 @@ Baked Random=Baked Random
 Bar=Bar
 Battery=Battery
 Beat=Beat
+Beats=Beats
 Big=Big
 Blind=Blind
 Blink=Blink
@@ -694,6 +695,7 @@ Right=Right
 Roll=Roll
 Romanization=Transliterate
 SHOW=Show
+Seconds=Seconds
 Select=Select
 Servers=Servers
 Shift Left=Shift Left
@@ -853,7 +855,8 @@ Edit combo=Edit combo
 Edit label=Edit label
 Edit warp=Edit warp
 Edit speed (percent)=Edit speed (percent)
-Edit speed (wait)=Edit speed (wait in beats)
+Edit speed (wait)=Edit speed (length)
+Edit speed (mode)=Edit speed (mode)
 Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
 Erase step timing=Erase step timing
@@ -1229,8 +1232,9 @@ Enter a new Tickcount value.=Enter a new Tickcount value.
 Enter a new Combo value.=Enter a new Combo value.
 Enter a new Label value.=Enter a name for this section of the chart.
 Enter a new Warp value.=Enter the beat you will warp to when you reach this point.
-Enter a new Speed percent value.=Enter the ratio for speed scrolling. 1 is the default.
-Enter a new Speed wait value.=Enter how long in beats it takes to change. 0 is instant.
+Enter a new Speed percent value.=Enter the ratio for speed scrolling.\n\n1 is the default scroll.
+Enter a new Speed wait value.=Enter how long in seconds/beats it takes to change.\n\n0 is instant.
+Enter a new Speed mode value.=Enter how this segment is handled.\n\nType "0" for beats, "1" for seconds.
 Are you sure you want to erase this chart's timing data?=Are you sure you want to erase this chart's timing data?
 Enter a new artist transliteration.=Enter a new artist transliteration.
 Enter a new artist.=Enter a new artist.
