[splittiming] Prepare the editor.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1231,7 +1231,7 @@ Enter a new Time Signature denominator value.=Enter the note value that represen
 Enter a new Tickcount value.=Enter a new Tickcount value.
 Enter a new Combo value.=Enter a new Combo value.
 Enter a new Label value.=Enter a name for this section of the chart.
-Enter a new Warp value.=Enter the beat you will warp to when you reach this point.
+Enter a new Warp value.=Enter the number of beats you will warp over.
 Enter a new Speed percent value.=Enter the ratio for speed scrolling.\n\n1 is the default scroll.
 Enter a new Speed wait value.=Enter how long in seconds/beats it takes to change.\n\n0 is instant.
 Enter a new Speed mode value.=Enter how this segment is handled.\n\nType "0" for beats, "1" for seconds.
