[splittiming] Let Fakes be edited.
Also expand on some descriptions.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -857,6 +857,7 @@ Edit warp=Edit warp
 Edit speed (percent)=Edit speed (percent)
 Edit speed (wait)=Edit speed (length)
 Edit speed (mode)=Edit speed (mode)
+Edit fake=Edit fake segment
 Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
 Erase step timing=Erase step timing
@@ -1223,18 +1224,19 @@ Can't undo - no undo data.=Can't undo - no undo data.
 Do you want to revert from disk?=Do you want to revert from disk?
 Do you want to revert to your last save?=Do you want to revert to your last save?
 Do you want to save changes before exiting?=Do you want to save changes before exiting?
-Enter a new BPM value.=Enter a new BPM value.
-Enter a new Stop value.=Enter a new Stop value.
-Enter a new Delay value.=Enter a new Delay value.
+Enter a new BPM value.=Enter a new BPM value.\n\nEnter the previous value to remove.
+Enter a new Stop value.=Enter a new Stop value.\n\nType "0" to remove.
+Enter a new Delay value.=Enter a new Delay value.\n\nType "0" to remove.
 Enter a new Time Signature numerator value.=Enter the number of beats per measure.
 Enter a new Time Signature denominator value.=Enter the note value that represents one beat.
-Enter a new Tickcount value.=Enter a new Tickcount value.
-Enter a new Combo value.=Enter a new Combo value.
-Enter a new Label value.=Enter a name for this section of the chart.
-Enter a new Warp value.=Enter the number of beats you will warp over.
-Enter a new Speed percent value.=Enter the ratio for speed scrolling.\n\n1 is the default scroll.
+Enter a new Tickcount value.=Enter a new Tickcount value.\n\nEnter the previous value to remove.
+Enter a new Combo value.=Enter a new Combo value.\n\nEnter the previous value to remove.
+Enter a new Label value.=Enter a name for this section of the chart.\n\nEnter a previously used label to remove.
+Enter a new Warp value.=Enter the number of beats you will warp over.\n\nType "0" to remove this segment.
+Enter a new Speed percent value.=Enter the ratio for speed scrolling.\n\nEnter the previous value to remove.\n\n1 is the default scroll.
 Enter a new Speed wait value.=Enter how long in seconds/beats it takes to change.\n\n0 is instant.
 Enter a new Speed mode value.=Enter how this segment is handled.\n\nType "0" for beats, "1" for seconds.
+Enter a new Fake value.=Enter the number of beats that won't be judged.\n\nType "0" to remove this.
 Are you sure you want to erase this chart's timing data?=Are you sure you want to erase this chart's timing data?
 Enter a new artist transliteration.=Enter a new artist transliteration.
 Enter a new artist.=Enter a new artist.
