[splittiming] Shrink lines.
We need some way to move the ScreenTextEntry
text entry down.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1233,7 +1233,7 @@ Enter a new Tickcount value.=Enter a new Tickcount value.\n\nEnter the previous 
 Enter a new Combo value.=Enter a new Combo value.\n\nEnter the previous value to remove.
 Enter a new Label value.=Enter a name for this section of the chart.\n\nEnter a previously used label to remove.
 Enter a new Warp value.=Enter the number of beats you will warp over.\n\nType "0" to remove this segment.
-Enter a new Speed percent value.=Enter the ratio for speed scrolling.\n\nEnter the previous value to remove.\n\n1 is the default scroll.
+Enter a new Speed percent value.=Enter the ratio for speed scrolling.\nEnter the previous value to remove.\n1 is the default scroll.
 Enter a new Speed wait value.=Enter how long in seconds/beats it takes to change.\n\n0 is instant.
 Enter a new Speed mode value.=Enter how this segment is handled.\n\nType "0" for beats, "1" for seconds.
 Enter a new Fake value.=Enter the number of beats that won't be judged.\n\nType "0" to remove this.
