--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -847,9 +847,7 @@ Exit Edit Mode=Exit Edit Mode
 Edit stop=Edit stop
 Edit delay=Edit delay
 Edit Timing Data=Edit Timing Data
-Edit time signature=Edit time signature (not working yet)
-Edit time signature (top)=Edit time signature (beats per measure)
-Edit time signature (bottom)=Edit time signature (single beat note value)
+Edit time signature=Edit time signature
 Edit tickcount=Edit tickcount
 Edit combo=Edit combo
 Edit label=Edit label
@@ -1227,8 +1225,7 @@ Do you want to save changes before exiting?=Do you want to save changes before e
 Enter a new BPM value.=Enter a new BPM value.\n\nEnter the previous value to remove.
 Enter a new Stop value.=Enter a new Stop value.\n\nType "0" to remove.
 Enter a new Delay value.=Enter a new Delay value.\n\nType "0" to remove.
-Enter a new Time Signature numerator value.=Enter the number of beats per measure.
-Enter a new Time Signature denominator value.=Enter the note value that represents one beat.
+Enter a new Time Signature.=Enter a new time signature.\nUse the format "x/y".\nEnter the previous value to remove.
 Enter a new Tickcount value.=Enter a new Tickcount value.\n\nEnter the previous value to remove.
 Enter a new Combo value.=Enter a new Combo value.\n\nEnter the previous value to remove.
 Enter a new Label value.=Enter a name for this section of the chart.\n\nEnter a previously used label to remove.
