[scroll] Languages update.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -855,6 +855,7 @@ Edit warp=Edit warp
 Edit speed (percent)=Edit speed (percent)
 Edit speed (wait)=Edit speed (length)
 Edit speed (mode)=Edit speed (mode)
+Edit scrolling factor=Edit scrolling factor
 Edit fake=Edit fake segment
 Editor options=Options
 EditorShowBGChangesPlay=Show Backgrounds
@@ -1233,6 +1234,7 @@ Enter a new Warp value.=Enter the number of beats you will warp over.\n\nType "0
 Enter a new Speed percent value.=Enter the ratio for speed scrolling.\nEnter the previous value to remove.\n1 is the default scroll.
 Enter a new Speed wait value.=Enter how long in seconds/beats it takes to change.\n\n0 is instant.
 Enter a new Speed mode value.=Enter how this segment is handled.\n\nType "0" for beats, "1" for seconds.
+Enter a new Scroll value.=Enter a new Scroll value.
 Enter a new Fake value.=Enter the number of beats that won't be judged.\n\nType "0" to remove this.
 Are you sure you want to erase this chart's timing data?=Are you sure you want to erase this chart's timing data?
 Enter a new artist transliteration.=Enter a new artist transliteration.
