--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1257,7 +1257,7 @@ Enter a new min BPM.=Enter the minimum displayed BPM.
 Enter a new max BPM.=Enter the maximum displayed BPM.
 More than %d notes per measure is not allowed.  This change has been reverted.=More than %d notes per measure is not allowed.  This change has been reverted.
 No backgrounds available=No backgrounds available
-EditHelpText=Up/Down:\n     change beat\nLeft/Right:\n     change snap\nNumber keys:\n     add/remove\n     tap note\nN and M keys:\n     swap tap notes\nCreate hold note:\n     Hold a number\n     while moving\n     Up or Down\nCreate roll note:\n      Hold Shift,\n      then create a\n      hold note.\nSpace bar:\n     Set area\n     marker\nT key:\n     Switch Timing\nEnter:\n     Area Menu\nEscape:\n     Main Menu\nF4:\n     Timing Menu\nF1:\n     Show help\n
+EditHelpText=Up/Down:\n     change beat\nLeft/Right:\n     change snap\nNumber keys:\n     add/remove\n     tap note\nN and M keys:\n     swap tap notes\nCreate hold note:\n     Hold a number\n     while moving\n     Up or Down\nCreate roll note:\n      Hold Shift,\n      then create a\n      hold note.\nSpace bar:\n     Set area\n     marker\nT key:\n     Switch Timing\nEnter:\n     Area Menu\nA Key: Alter Menu\nEscape:\n     Main Menu\nF4:\n     Timing Menu\nF1:\n     Show help\n
 PlayRecordHelpText=Press START to end
 Save successful.=Save successful.
 Saved as SM and DWI.=Saved as SM and DWI.
@@ -1269,6 +1269,7 @@ This change creates notes past the end of the music and is not allowed.=This cha
 This will destroy all unsaved changes.=This will destroy all unsaved changes.
 Undo=Undo
 You must be in Song Timing Mode to edit BG Changes.=You must be in Song Timing Mode to edit BG Changes.
+You must have an area selected to enter the Alter Menu.=You must have an area selected to enter the Alter Menu.
 
 Current beat=Current beat
 Current second=Current second
