Add a Clear Clipboard function to the editor.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -807,6 +807,7 @@ Clear Machine Edits=Clear Machine Edits
 Clear Machine Stats=Clear Machine Scores
 Clear USB edits=Clear USB edits
 Clear area=Clear area
+Clear clipboard=Clear clipboard
 CoinMode=Coin Mode
 CoinModeNoHome=Coin Mode
 CoinsPerCredit=Coins&nbsp;Per Credit
