Add "Convert Selection to Warp Segment" option.
Also, preemptively fix another bug with the menu moving.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -814,6 +814,7 @@ CoinsPerCredit=Coins&nbsp;Per Credit
 Connection=Connection
 Convert pause to beats=Convert pause to beats
 Convert selection to pause=Convert selection to pause
+Convert selection to warp=Convert selection to Warp Segment
 Copy=Copy
 CourseSortOrder=Course Sort
 Create New=Create New
