Add "Convert Selection to Fake Segment" option.
Once again, do things math free.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -815,6 +815,7 @@ Connection=Connection
 Convert pause to beats=Convert pause to beats
 Convert selection to pause=Convert selection to pause
 Convert selection to warp=Convert selection to Warp Segment
+Convert selection to fake=Convert selection to Fake Segment
 Copy=Copy
 CourseSortOrder=Course Sort
 Create New=Create New
