Alright pumpervinil, you got your Delay wish.
I hope that's enough for you.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -814,6 +814,7 @@ CoinsPerCredit=Coins&nbsp;Per Credit
 Connection=Connection
 Convert pause to beats=Convert pause to beats
 Convert selection to pause=Convert selection to pause
+Convert selection to delay=Convert selection to delay
 Convert selection to warp=Convert selection to Warp Segment
 Convert selection to fake=Convert selection to Fake Segment
 Copy=Copy
