Allow setting Preview Music via Alter Menu.
Now math calculations are no longer needed.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -833,6 +833,7 @@ DelayedTextureDelete=Keep&nbsp;Textures In&nbsp;Memory
 Delete=Delete
 Delete beat and shift up=Delete beat and shift up
 Description=Description
+Designate as Music Preview=Designate as Music Preview
 Difficulty=Difficulty
 Display BPM=Display BPM
 DisplayAspectRatio=Aspect Ratio
