Allow converting delays to beats.
Just find a better song than Uprock to use this on.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -812,7 +812,8 @@ CoinMode=Coin Mode
 CoinModeNoHome=Coin Mode
 CoinsPerCredit=Coins&nbsp;Per Credit
 Connection=Connection
-Convert pause to beats=Convert pause to beats
+Convert pause to beats=Convert stop to beats
+Convert delay to beats=Convert delay to beats
 Convert selection to pause=Convert selection to pause
 Convert selection to delay=Convert selection to delay
 Convert selection to warp=Convert selection to Warp Segment
