Use StepAttacks instead.
This deprecates the GetSongAttacks lua function.

Next up: make it so that no text is displayed if
Step Attacks are on, but display "No Attacks" if
attacks are turned off.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -707,7 +707,8 @@ Skip=Skip
 Skippy=Skippy
 Slow=Slow
 SN2=Supernova 2
-SongAttacks=Song Attacks
+SongAttacks=Step Attacks
+StepAttacks=Step Attacks
 Song BGAnimation=Song BGAnimation
 Song Bitmap=Song Bitmap
 Song Movie=Song Movie
