Changed text: Revert From Cache.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -978,7 +978,7 @@ Remove Change=Remove Change
 Rename=Rename
 Reset To Defaults=Reset Options To Default Values
 Revert from disk=Revert from disk
-Revert to last save=Revert to last save
+Revert to last save=Revert from cache
 Save=Save
 SaveScores=Save Scores
 SaveReplays=Save Replays
