Use Step Author instead of Chart Style on right.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -1286,6 +1286,7 @@ Selection beat=Selection beat
 Difficulty=Difficulty
 Description=Description
 Chart Style=Chart Style
+Step Author=Step Author
 Main title=Main title
 Subtitle=Subtitle
 Tap Note=Tap Note
