Add the requested copy timing data functionality.
I don't know of a good way to copy timing data
across different styles, though.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -821,6 +821,7 @@ Convert selection to delay=Convert selection to delay
 Convert selection to warp=Convert selection to Warp Segment
 Convert selection to fake=Convert selection to Fake Segment
 Copy=Copy
+Copy timing data=Copy timing data
 CourseSortOrder=Course Sort
 Create New=Create New
 Create New Course=Create New
@@ -944,6 +945,7 @@ OsMountPlayer1=OS&nbsp;Mount Player1
 OsMountPlayer2=OS&nbsp;Mount Player2
 Paste at begin marker=Paste at begin marker
 Paste at current beat=Paste at current beat
+Paste timing data=Paste timing data
 Persp=Persp
 Play current beat to end=Play current beat to end
 Play preview music=Play preview music
