Replace #BEAT tags with #SECOND tags.
Split Timing has made this necessary.

Yes, this means another recache.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -916,7 +916,7 @@ Insert Entry=Insert Entry
 Jumps=Jumps
 Key Joy Mappings=Config Key/Joy Mappings
 Language=Language
-Last beat hint=Last beat hint
+Last second hint=Last second hint
 Layer=Layer
 LifeDifficulty=Life Difficulty
 LifeType=Life Type
@@ -1256,7 +1256,7 @@ Enter a new chart style.=Enter a new chart style (e.g. "Pad", "Keyboard").
 Enter a new meter.=Enter the difficulty rating for this chart.
 Enter the author who made this step pattern.=Enter the author who made this step pattern.
 Enter the offset for the song.=Enter the beat 0 offset for the song.
-Enter a new last beat hint.=Enter a new last beat hint.
+Enter a new last second hint.=Enter a new last second hint.
 Enter a new main title transliteration.=Enter a new main title transliteration.
 Enter a new main title.=Enter a new main title.
 Enter a new sub title transliteration.=Enter a new sub title transliteration.
