Allow setting last second at the current beat.
Use the Area Menu for this one.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -838,6 +838,7 @@ Delete=Delete
 Delete beat and shift up=Delete beat and shift up
 Description=Description
 Designate as Music Preview=Designate as Music Preview
+Designate last second at current beat=Designate last second at current beat
 Difficulty=Difficulty
 Display BPM=Display BPM
 DisplayAspectRatio=Aspect Ratio
