Add routine helper: switch notes' player.

--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -914,6 +914,7 @@ Insert=Insert
 Insert Credit=Insert Credit
 Insert beat and shift down=Insert beat and shift down
 Insert Entry=Insert Entry
+Invert notes' player=Invert player notes (routine only)
 Jumps=Jumps
 Key Joy Mappings=Config Key/Joy Mappings
 Language=Language
