--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -932,6 +932,8 @@ MenuTimer=Menu Timer
 Meter=Meter
 Min BPM=Min Specified BPM
 Mines=Mines
+Mirror Player 1 to 2=Mirror P1's notes to P2 (routine only)
+Mirror Player 2 to 1=Mirror P2's notes to P1 (routine only)
 MoveRandomToEnd=Random At&nbsp;End
 More Options=More Options
 MovieColorDepth=Movie Color
