--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -816,7 +816,7 @@ CoinsPerCredit=Coins&nbsp;Per Credit
 Connection=Connection
 Convert pause to beats=Convert stop to beats
 Convert delay to beats=Convert delay to beats
-Convert selection to pause=Convert selection to pause
+Convert selection to pause=Convert selection to stop
 Convert selection to delay=Convert selection to delay
 Convert selection to warp=Convert selection to Warp Segment
 Convert selection to fake=Convert selection to Fake Segment
