--- a/Themes/_fallback/Languages/en.ini
+++ b/Themes/_fallback/Languages/en.ini
@@ -802,6 +802,7 @@ CelShadeModels=Cel-shaded Models
 Center Image=Center Image
 Chaos=Chaos
 Characters=Characters
+Chart Name=Chart Name
 Chart Style=Chart Style
 Choose=Choose
 Clear Bookkeeping Data=Clear Bookkeeping Data
@@ -1256,6 +1257,7 @@ Enter a new artist.=Enter a new artist.
 Enter a new genre.=Enter a new genre.
 Enter a new credit.=Enter a new credit.
 Enter a new description.=Enter a new description.
+Enter a new chart name.=Enter the name/title of this chart.
 Enter a new chart style.=Enter a new chart style (e.g. "Pad", "Keyboard").
 Enter a new meter.=Enter the difficulty rating for this chart.
 Enter the author who made this step pattern.=Enter the author who made this step pattern.
